# biorepository_data_wrangling

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  content.html  generating-synthetic-data.ipynb  genindex.html  getting_started.md  intro.html  intro.md  markdown-notebooks.html  markdown.html  myst.yml  notebooks.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  specimen-faker.html
.github/workflows/: deploy.yml
_sources/: markdown-notebooks.ipynb
biorepository_data_wrangling/: _config.yml  _toc.yml  specimen-faker.ipynb
