[project]
name = "biorepository-data-wrangling2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "jupyter-book>=2.0.0a0",
    "pandas[compression,excel,parquet,plot]>=2.3.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
